--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "compile": "babel exercises --out-dir src",
-    "setup": "npm install && ncp koans/ exercises/",
-    "start": "npm run compile && nodemon server.js",
-    "test": "npm run compile && mocha -b --compilers js:babel/register --require test/helpers.js test/**/*.js || echo",
-    "watch": "onchange exercises/*.jsx -- npm run test"
+    "setup": "yarn install && ncp koans/ exercises/",
+    "start": "yarn run compile && nodemon server.js",
+    "test": "yarn run compile && mocha -b --compilers js:babel/register --require test/helpers.js test/**/*.js || echo",
+    "watch": "onchange exercises/*.jsx -- yarn run test"
   },
   "repository": {
     "type": "git",
